syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "UserInfo.proto";
import "Messages/CustomerData.proto";
import "Messages/OfferContacts.proto";
import "Messages/CaseData.proto";
import "GrpcDateTime.proto";
import "ModificationStamp.proto";
import "Messages/UpdatedInStarbuildStates.proto";

message Case {
	int64 CaseId =  1;

	// Vlastnosti Case	
	CaseData Data = 2;
	
	// Stav Case
	int32 State = 3;

	UpdatedInStarbuildStates StateUpdatedInStarbuild = 4;
	
	// Cas posledni zmeny stavu Case
	cis.types.GrpcDateTime StateUpdatedOn = 5;
	
	// Hlavni klient Case
	CustomerData Customer = 6;

	// kontaktni informace
	OfferContacts OfferContacts = 7;

	// Poradce vlastnici Case
	cis.types.UserInfo CaseOwner = 8;

	// Uzivatel, ktery Case vytvoril
	cis.types.ModificationStamp Created = 9;

	// Aktivni tasky workflow na danem Case
	repeated ActiveTask Tasks = 10;
}

message ActiveTask {
	int32 TaskId = 1;

	int32 TaskTypeId = 2;
}