syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

enum UpdatedInStarbuildStates {
	Unknown = 0;
	Ok = 1;
	Error = 2;
}
